[gd_scene load_steps=2 format=3 uid="uid://b84g8iikwwto4"]

[ext_resource type="Script" path="res://lobby.gd" id="1_jkwce"]

[node name="lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jkwce")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -18.0
offset_right = 18.0
offset_bottom = 23.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_direction = 1
layout_mode = 2
theme_override_constants/separation = 30

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "sdsd"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "we"

[node name="player_1" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "we"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer2/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer2/VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "we"

[node name="player_2" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer2/VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "we"

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer3"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer3/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "we"

[node name="player_3" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer3/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "we"

[node name="VBoxContainer4" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer4"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer4/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "we"

[node name="player_4" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer4/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "we"
